[tool.poetry]
name = "hyperspy-nuitka"
version = "0.1.0"
description = ""
authors = ["werfei <459876292@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nuitka = "^2.0.3"
exspy = "^0.2"
scikit-learn = "^1.5.0"
pyside6 = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
